2008-01-30  Roland McGrath  <roland@redhat.com>

	* manual/libc.texinfo: Update back-cover text.

	* elf/elf.h (NT_386_TLS): New macro.

2008-01-29  Roland McGrath  <roland@redhat.com>

	* Makeconfig (sysd-rules-patterns): New variable.
	* Makerules ($(common-objpfx)sysd-rules): Drive the loop from that.
	(check-inhibit-asm): New canned sequence, replaces ...
	(open-check-inhibit-asm, close-check-inhibit-asm): ... these, removed.
	* elf/rtld-Rules ($(objpfx)rtld-%.os): Use $(rtld-CPPFLAGS) in commands.
	(rtld-CPPFLAGS): Renamed from CPPFLAGS-rtld.
	(CFLAGS-rtld): Variable removed.

2008-01-24  Roland McGrath  <roland@redhat.com>

	* configure.in: Let configure fragments set base_os.
	* configure: Regenerated.

2008-01-22  Ulrich Drepper  <drepper@redhat.com>

	* po/ko.po: Update from translation team.

2008-01-12  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/fpu/ftestexcept.c (fetestexcept): Use short for fnstsw.

2008-01-12  Andreas Jaeger  <aj@suse.de>

	[BZ #5040]
	* sysdeps/unix/sysv/linux/x86_64/sys/epoll.h (enum EPOLL_EVENTS):
	Add EPOLLRDHUP.

2008-01-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* hurd/hurdsock.c (_hurd_socket_server): Return the standard
	error EAFNOSUPPORT rather than non-standard EPFNOSUPPORT.
	* sunrpc/bindrsvprt.c (bindresvport): Likewise.

2007-10-23  Alexandre Oliva  <aoliva@redhat.com>

	* include/link.h (FORCED_DYNAMIC_TLS_OFFSET): Define.
	* elf/dl-close.c (_dl_close): Check for it.
	* elf/dl-reloc.c (CHECK_STATIC_TLS): Likewise.
	(_dl_allocate_static_tls): Likewise.
	* elf/dl-tls.c (_dl_allocate_tls_init): Likewise.
	(__tls_get_addr): Protect from race conditions in setting l_tls_offset
	to it.
	* elf/tst-tls16.c: New file.
	* elf/tst-tlsmod16a.c: New file.
	* elf/tst-tlsmod16b.c: New file.
	* elf/Makefile: Add rules to build and run tst-tls16.

2008-01-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5628]
	* bits/shm.h: Fix comment describing shmid_ds.
	* sysdeps/gnu/bits/shm.h: Likewise.